<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dbmsjack.dbms.AddFragment">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#000"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        app:cardCornerRadius="@dimen/normal_textview">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/colorOrange"
            android:textStyle="bold"
            android:fontFamily="sans-serif-smallcaps"
            android:padding="@dimen/normal_textview"
            android:text="@string/add_header"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/normal"
        android:layout_marginBottom="9dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        app:cardBackgroundColor="#000">

        <LinearLayout
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:padding="@dimen/normal"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/stud_name"
                android:textColor="#fff"
                android:textSize="18sp"
                android:fontFamily="monospace"
                android:paddingTop="@dimen/normal"
                android:layout_marginLeft="@dimen/normal"
                android:textStyle="bold"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:id="@+id/stud_name_send"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorOrange"
                    android:textStyle="bold"
                    android:textColorHint="#fff"
                    android:gravity="center"/>

            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/normal"
        android:layout_marginBottom="9dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="@dimen/normal"
        app:cardBackgroundColor="#000">

        <LinearLayout
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:padding="@dimen/normal"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/stud_reg"
                android:textColor="#fff"
                android:textSize="18sp"
                android:fontFamily="monospace"
                android:paddingTop="@dimen/normal"
                android:layout_marginLeft="@dimen/normal"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:id="@+id/stud_reg_send"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorOrange"
                    android:textStyle="bold"
                    android:textColorHint="#fff"
                    android:gravity="center"/>

            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/normal"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="@dimen/normal"
        android:layout_marginBottom="9dp"
        app:cardBackgroundColor="#000">

        <LinearLayout
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:padding="@dimen/normal"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/stud_school"
                android:textColor="#fff"
                android:textSize="18sp"
                android:fontFamily="monospace"
                android:paddingTop="@dimen/normal"
                android:layout_marginLeft="@dimen/normal"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:id="@+id/stud_school_send"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorOrange"
                    android:textStyle="bold"
                    android:textColorHint="#fff"
                    android:gravity="center"/>

            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/normal"
        android:layout_marginBottom="9dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="@dimen/normal"
        app:cardBackgroundColor="#000">

        <LinearLayout
            android:padding="@dimen/normal"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/stud_cgpa"
                android:textColor="#fff"
                android:textSize="18sp"
                android:fontFamily="monospace"
                android:paddingTop="@dimen/normal"
                android:layout_marginLeft="@dimen/normal"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:id="@+id/stud_cgpa_send"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorOrange"
                    android:textStyle="bold"
                    android:textColorHint="#fff"
                    android:gravity="center"/>

            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_submit_button"
        android:text="@string/add_submit"
        android:background="#FF6347"
        android:textStyle="bold"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_gravity="center"/>


</LinearLayout>
